# qin-public

./: .gitignore
pyqin/: README.md  pyproject.toml  requirements.txt  setup.py
pyqin/examples/: stream_from_file.py  stream_from_microphone.py  stream_from_url.py
pyqin/pyqin.egg-info/: SOURCES.txt  requires.txt
pyqin/websocket_client/: __init__.py
pyqin/webspcket_client/: audio_streams.py  client.py  exceptions.py
python/: README.md  pyproject.toml
python/examples/: stream_from_file.py  stream_from_microphone.py  stream_from_url.py
python/pyqin/: __init__.py  audio_player.py  audio_streams.py  client.py  exceptions.py  models.py  utils.py
python/pyqin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
