# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websocket_client_package"
version = "0.1.0"
description = "A Python client package to interact with the custom WebSocket server."
readme = "README.md"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "aiohttp",
    "asyncio",
    "pydantic"
]
