[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqin"
version = "0.1.0"
description = "A client package to interact with the Qin websocket."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "websockets>=10.0",
    "pyaudio>=0.2.11",
    "numpy>=1.18.5",
    "requests>=2.25.1",
    "aiohttp",
    "asyncio",
    "pydantic"
]

[project.urls]
Homepage = "https://github.com/yourusername/ws_audio_client"